--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -7,12 +7,15 @@
 :root {
   // colors
   --color-primary: whitesmoke;
-  --color-secondary: green;
+  --color-secondary: #e0b701;
+  --hover: #f5f5f5b9;
+  --hover-bg: #404041;
   --bg-primary: #2e3034;
   --bg-secondary: #3a3b3f;
+  --bg-blur: rgba(46, 47, 51, 0.99);
 
   // heights
-  --nav-height: 90px;
+  --nav-height: 70px;
 
   // fonts
   --font-primary: 'Poppins', sans-serif;
@@ -21,6 +24,10 @@
 
 html {
   font-size: 62.5%;
+
+  @media (max-width: 678px) {
+    font-size: 53%;
+  }
 }
 
 body {
