--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -5,8 +5,13 @@
 }
 
 a {
+  display: inline-block;
   text-decoration: none;
   color: var(--color-primary);
+
+  & > * {
+    pointer-events: none;
+  }
 }
 
 *::-webkit-scrollbar {
